--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'fantasy';
-    font-size: 50px;
+
 }
 
 h2{
@@ -9,7 +9,7 @@ h2{
     color: #575ed8;
 }
 
-#mario-chat{
+#live-chat{
     max-width: 600px;
     margin: 30px auto;
     border: 1px solid #ddd;
@@ -60,7 +60,7 @@ input{
 }
 
 button{
-    background: #575ed8;
+    background: green;
     color: #fff;
     font-size: 18px;
     border: 0;
