--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,5 @@
 body{
     font-family: 'fantasy';
-
 }
 
 h2{
@@ -53,7 +52,7 @@ input{
     border: 0;
     display: block;
     width: 100%;
-    background: #fff;
+    background: #ddd;
     border-bottom: 1px solid #eee;
     font-family: Nunito;
     font-size: 16px;
