--- a/public/styles.css
+++ b/public/styles.css
@@ -52,7 +52,7 @@ input{
     border: 0;
     display: block;
     width: 100%;
-    background: #ddd;
+    background: #dddd;
     border-bottom: 1px solid #eee;
     font-family: Nunito;
     font-size: 16px;
